Bug 411384 - CTRL+RIGHT / CTRL+LEFT
Summary: CTRL+RIGHT / CTRL+LEFT
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: shortcuts (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-28 11:12 UTC by Nickolay Platonov
Modified: 2023-11-17 10:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nickolay Platonov 2019-08-28 11:12:50 UTC
SUMMARY

Pressing CTRL+RIGHT on a folder in the left panel is expected to display the content of the folder in the opposite panel. It does not. Same about CTRL+LEFT in the right folder. Instead, the cursor is moved to the next column in the listing.

However, if the CTRL+RIGHT is pressed on the _last_ folder in the listing (so that the cursor does not have room to move more to the right) - the content of that folder _is_ displayed in the opposite panel.


STEPS TO REPRODUCE
1. Place the cursor on some folder in the left panel.
2. Press CTRL+RIGHT

OBSERVED RESULT

3. Observe the content of the opposite panel did not change.


EXPECTED RESULT

4. Expected is to see the content of the folder under the cursor in the opposite panel.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Ubuntu 18.04.2
(available in About System)
KDE Plasma Version: 5.12.8
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION

Krusader: Version 2.6.0 "Stiff Challenges" (package version - 2:2.6.0-1)
Comment 1 Nickolay Platonov 2019-08-28 11:15:13 UTC
Screencast demonstrating the bug: https://yadi.sk/i/-V19RmDH4SZh8A
Comment 2 Toni Asensi Esteve 2019-08-28 21:20:51 UTC
Thanks for the screencast, Nickolay. The bug was also reproduced in the git version of Krusader when the "brief view" was used.
Comment 3 Nickolay Platonov 2019-08-29 08:16:08 UTC
Sure. Looking forward for the fix!
Comment 4 Davide Gianforte 2019-09-11 16:54:18 UTC
There's a proposed solution in https://phabricator.kde.org/D23880
Comment 5 Davide Gianforte 2019-09-15 20:29:00 UTC
Git commit ebb75da3e2c0475730de27aceb1307bb4e0feab3 by Davide Gianforte.
Committed on 15/09/2019 at 20:28.
Pushed by gengisdave into branch 'master'.

Handle Ctrl+Left/Right not working in brief view

Since the fix for bug 374238, Ctrl key with left or right keys didn't work anymore in the brief view.

This patch change the logic between KrInterBriefView::handleKeyEvent and KrView::handleKeyEvent

FIXED: [ 411384 ] CTRL+RIGHT / CTRL+LEFT

Differential revision: https://phabricator.kde.org/D23880

M  +2    -11   krusader/Panel/PanelView/krinterbriefview.cpp

https://commits.kde.org/krusader/ebb75da3e2c0475730de27aceb1307bb4e0feab3
Comment 6 Nickolay Platonov 2019-09-19 08:09:20 UTC
Glad to see it fixed, thanks a lot! Any idea when the fix will be available in the ubuntu repos? Or, is there any custom PPA with recent Krusader?
Comment 7 Nickolay Platonov 2019-10-26 17:05:59 UTC
Any news on making the fix actually available for the masses?
Comment 8 Toni Asensi Esteve 2020-02-08 00:07:19 UTC
> Glad to see it fixed, thanks a lot! Any idea when the fix will be available 
> in the ubuntu repos? Or, is there any custom PPA with recent Krusader?
> [...]
> Any news on making the fix actually available for the masses?
Hello, Nickolay. If you can follow the steps of
    https://commits.kde.org/krusader?path=INSTALL
then you can build Krusader and get the latest features, tell Krusader developers about what you find, etc.
Comment 9 Nickolay Platonov 2023-11-17 10:38:17 UTC
This still does not seem to work in the Kubuntu 22, which ships Krusader version 2.7.2 "Peace of Mind"...

Probably the developers uses different linux distribution, but I believe supporting K/Ubuntu is important, since it a very popular distribution.
Comment 10 Nickolay Platonov 2023-11-17 10:40:05 UTC
Update - it does not work in "Brief" mode (which I use most), but works in "Detailed".