Handle Ctrl+Left/Right not working in brief view

Since the fix for bug 374238, Ctrl key with left or right keys didn't work anymore in the brief view.

This patch change the logic between KrInterBriefView::handleKeyEvent and KrView::handleKeyEvent

FIXED: [ 411384 ] CTRL+RIGHT / CTRL+LEFT
BUG: 411384

Differential revision: https://phabricator.kde.org/D23880